# voxel-rs

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  out.txt
src/: block.rs  config.rs  input.rs  main.rs  network.rs  player.rs  simple.rs  texture.rs  util.rs
src/cfg/: cfg.toml
src/client/: input.rs  meshing.rs  mod.rs  network.rs
src/client/input/: chunk.rs  game.rs  input.rs  mod.rs
src/core/: mod.rs
src/network/: mod.rs
src/render/: camera.rs  frames.rs  mod.rs
src/server/: game.rs  mod.rs  network.rs  worldgen.rs
src/server/world/: mod.rs
src/shader/: vertex_150.glslf  vertex_150.glslv
src/sim/: mod.rs  worldgen.rs
src/sim/chunk/: chunk.rs  grid.rs  grid_tree.rs  map.rs  mod.rs  pos.rs  region.rs
src/sim/physics/: mod.rs
src/sim/player/: mod.rs  player_set.rs
src/threads/: input.rs  mod.rs  network.rs  utility.rs
src/util/: mod.rs
src/utils/: lazy_container.rs  mod.rs
