[package]
name = "voxel-rs"
version = "0.1.0"
# TODO: Add email
authors = ["Technici4n"]
edition = "2018"

[profile.release]
debug = true

[dependencies]
gfx = "^0.18"
gfx_device_gl = "^0.16.1"
glutin = "^0.19"
gfx_window_glutin = "^0.29"
image = "^0.21"
texture_packer = "^0.16"
nalgebra = "^0.17"
noise = "^0.5"
rand = "^0.6"
serde = "^1.0"
serde_derive = "^1.0"
toml = "^0.4"
bincode = "^1.1"
net2 = "^0.2"
ncollide3d = "^0.19"
nphysics3d = "^0.11"
num = "^0.2"
fnv = "^1.0.3"

[patch.crates-io]
cobalt = { git = 'https://github.com/Technici4n/cobalt-rs' }
