[package]
name = "voxel-rs"
version = "0.1.0"
# TODO: Add email
authors = ["Technici4n"]
edition = "2018"

[profile.release]
debug = true

[dependencies]
gfx = "^0.18"
gfx_device_gl = "^0.16.1"
glutin = "^0.19"
gfx_window_glutin = "^0.29"
image = "^0.21"
texture_packer = "^0.16"
noise = "^0.5"
rand = "^0.6"
serde = "^1.0"
serde_derive = "^1.0"
toml = "^0.4"
bincode = "^1.1"
net2 = "^0.2"
num = "^0.2"
derive_more = "^0.14"

[dependencies.enumset]
version = "^0.4.0"
features = ["serde"]

[dependencies.nalgebra]
version = "^0.18"
features = ["serde-serialize"]

[dependencies.ncollide3d]
version = "^0.19"
features = ["serde"]

[dependencies.nphysics3d]
version = "^0.11"

[dependencies.hashbrown]
version = "^0.3.0"
features = ["serde"]
